wip: front end swings view

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -46,6 +46,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "search_results";
 @import "settings_page";
 @import "shuttle_map";
+@import "swings_view";
 @import "tab_bar";
 @import "vehicle_icon";
 @import "vehicle_map";
