--- a/assets/css/_tab_bar.scss
+++ b/assets/css/_tab_bar.scss
@@ -47,6 +47,14 @@
     fill: $color-primary;
   }
 
+  .m-tab-bar__swings & {
+    stroke: $color-secondary-light;
+  }
+
+  .m-tab-bar__link--active.m-tab-bar__swings & {
+    stroke: $color-primary;
+  }
+
   .m-tab-bar__logo &,
   .m-tab-bar__t-logo & {
     fill: $white;
