--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -55,7 +55,7 @@
   padding-right: 1.5rem;
   border-bottom: 1px solid #515459;
 
-  .run-subheader {
+  .subheader {
     position: absolute;
     top: calc(50% - 7px / 2 + 8px);
     left: 1.5rem;
@@ -67,7 +67,7 @@
     padding-left: 2rem;
     padding-right: 2rem;
 
-    .run-subheader {
+    .subheader {
       left: 2rem;
     }
 
@@ -133,5 +133,55 @@
   svg {
     width: 0.75rem;
     height: 0.75rem;
+  }
+}
+
+@media screen and (max-width: $mobile-max-width) {
+  .m-swings-view__table-header-cell {
+    padding-left: 1rem;
+    padding-right: 1.25rem;
+
+    .subheader {
+      left: 1rem;
+    }
+
+    &.swing-off {
+      padding-left: 1.5rem;
+      padding-right: 1rem;
+
+      .subheader {
+        left: 1.5rem;
+      }
+    }
+
+    .swing-on {
+      display: none;
+    }
+
+    .swing-on-time {
+      position: absolute;
+      top: calc(50% - 7px / 2 + 8px);
+      left: 1rem;
+      font-size: 0.5rem;
+      font-weight: 400;
+    }
+
+    .vehicle-no {
+      display: none;
+    }
+  }
+
+  .m-swings-view__table-cell {
+    padding-left: 1rem;
+    padding-right: 1.5rem;
+
+    &.swing-off {
+      padding-left: 1.5rem;
+    }
+  }
+
+  .m-swings-view__run_icon {
+    bottom: 0.875rem;
+    right: 4.25rem;
   }
 }
