fix: use Helvetica for route pill text

--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -121,6 +121,7 @@
   top: calc(50% - 0.8125rem / 2);
   background: $color-primary-dark;
   border-radius: 4px;
+  font-family: $font-family-route-pill;
   width: 1.625rem;
   height: 0.9375rem;
   color: $white;
