feat: move from Inter UI to Inter

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,7 +5,7 @@ $picker-width-narrow: 9.5rem;
 $picker-width-wide: $picker-width-narrow + 3.1;
 
 @import "base";
-@import "inter_ui";
+@import "inter";
 @import "ui_kit";
 @import "leaflet";
 
