--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -49,36 +49,43 @@
 }
 
 .m-swings-view__table-header-cell {
-  position: relative;
-  padding-top: 0.6875rem;
-  padding-bottom: 1.3125rem;
+  padding-top: 0.5625rem;
+  padding-bottom: 0.5rem;
   padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-right: 0rem;
   border-bottom: 1px solid #515459;
+  vertical-align: top;
+  text-align: right;
 
-  .subheader {
-    position: absolute;
-    top: calc(50% + 0.28125rem);
-    left: 1.5rem;
-    font-size: 0.6875rem;
-    font-weight: 400;
-  }
-
-  &.swing-off {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .subheaders {
+    display: flex;
+    justify-content: flex-end;
 
     .subheader {
-      left: 2rem;
-    }
-
-    .route-subheader {
-      position: absolute;
-      top: calc(50% + 0.28125rem);
-      left: 4.25rem;
+      padding-top: 0.125rem;
       font-size: 0.6875rem;
       font-weight: 400;
     }
+
+    .route-subheader {
+      display: inline-block;
+      padding-top: 0.125rem;
+      padding-left: 1rem;
+      font-size: 0.6875rem;
+      font-weight: 400;
+    }
+  }
+
+  &.swing-on {
+    vertical-align: bottom;
+  }
+
+  &.swing-off {
+    padding-left: 3.0625rem;
+  }
+
+  &:last-child {
+    padding-right: 1.1875rem;
   }
 }
 
@@ -99,25 +106,28 @@
   border-bottom: 1px solid #dcdcdc;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  padding-left: 1.5rem;
-  padding-right: 3.5rem;
   font-size: 0.6875rem;
   font-variant-numeric: tabular-nums;
+  text-align: right;
 
-  &.swing-off {
-    padding-left: 2rem;
+  &:last-child {
+    padding-left: 1.0625rem;
+    padding-right: 1.1875rem;
   }
 
-  a {
-    text-decoration-line: underline;
-    cursor: pointer;
+  .m-swings-view__table-cell-contents {
+    display: flex;
+    justify-content: flex-end;
+
+    a {
+      text-decoration-line: underline;
+      cursor: pointer;
+    }
   }
 }
 
 .m-swings-view__route-pill {
-  position: absolute;
-  left: 4.25rem;
-  top: calc(50% - 0.8125rem / 2);
+  margin-left: 0.5rem;
   background: $color-primary-dark;
   border-radius: 4px;
   font-family: $font-family-route-pill;
@@ -135,27 +145,26 @@
 }
 
 .m-swings-view__run_icon {
-  position: absolute;
   fill: $color-primary-dark;
   stroke: $color-primary-dark;
 
   &.arrow {
-    bottom: 0.75rem;
-    right: 5.25rem;
-  }
-
-  &.ghost {
-    bottom: 0.875rem;
-    right: 5.35rem;
+    padding-right: 0.375rem;
 
     svg {
-      stroke-width: 0.2;
+      width: 0.5rem;
+      height: 0.5rem;
     }
   }
 
-  svg {
-    width: 0.75rem;
-    height: 0.75rem;
+  &.ghost {
+    padding-right: 0.5rem;
+
+    svg {
+      width: 0.75rem;
+      height: 0.75rem;
+      stroke-width: 0.2;
+    }
   }
 }
 
@@ -177,7 +186,7 @@
       }
     }
 
-    .swing-on {
+    .swing-on-text {
       display: none;
     }
 
@@ -187,10 +196,6 @@
       left: 1rem;
       font-size: 0.5rem;
       font-weight: 400;
-    }
-
-    .vehicle-no {
-      display: none;
     }
   }
 
