--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -40,6 +40,7 @@
 
 .m-swings-view__table {
   border-collapse: collapse;
+  position: relative;
   white-space: nowrap;
   text-align: left;
 }
@@ -56,6 +57,11 @@
   border-bottom: 1px solid #515459;
   vertical-align: top;
   text-align: right;
+  background-color: $color-bg-base;
+  position: sticky;
+  position: -webkit-sticky;
+  top: -1px;
+  z-index: 1002;
 
   .m-swings-view__table-header-cell-subheaders {
     display: flex;
