--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -46,7 +46,8 @@
 }
 
 .m-swings-view__table-header {
-  @include font-small font-weight: 700;
+  @include font-small;
+  font-weight: 700;
 }
 
 .m-swings-view__table-header-cell {
@@ -98,7 +99,7 @@
 .m-swings-view__table-row-active {
   color: $color-primary-dark;
   background-color: $white;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .m-swings-view__table-row-inactive {
@@ -107,12 +108,18 @@
   font-weight: 400;
 }
 
+.m-swings-view__table-row-last-past {
+  th {
+    border-bottom: 1px solid #515459;
+  }
+}
+
 .m-swings-view__table-cell {
+  @include font-small;
   position: relative;
   border-bottom: 1px solid #dcdcdc;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-size: 0.6875rem;
   font-variant-numeric: tabular-nums;
   text-align: right;
 
@@ -129,6 +136,34 @@
       text-decoration-line: underline;
       cursor: pointer;
     }
+  }
+}
+
+.m-swings-view__show-past {
+  font-size: 0.6875rem;
+  font-weight: 400;
+  color: $color-primary;
+  padding-top: 0.6875rem;
+  padding-bottom: 0.6875rem;
+
+  &.m-swings-view__show-past-enabled {
+    border-bottom: 1px solid #dcdcdc;
+  }
+
+  &.m-swings-view__show-past-disabled {
+    border-bottom: 1px solid #515459;
+  }
+}
+
+.m-swings-view__show-past-icon {
+  width: 0.6rem;
+  display: inline-block;
+  padding-left: 0.5rem;
+  padding-right: 0.375rem;
+
+  svg {
+    fill: $color-primary;
+    stroke: $color-primary;
   }
 }
 
