--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -45,46 +45,52 @@
 }
 
 .m-swings-view__table-header {
-  font-size: 0.6875rem;
-  font-weight: 700;
+  @include font-small font-weight: 700;
 }
 
 .m-swings-view__table-header-cell {
-  position: relative;
-  padding-top: 0.6875rem;
-  padding-bottom: 1.3125rem;
+  padding-top: 0.5625rem;
+  padding-bottom: 0.5rem;
   padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-right: 0rem;
   border-bottom: 1px solid #515459;
+  vertical-align: top;
+  text-align: right;
 
-  .subheader {
-    position: absolute;
-    top: calc(50% + 0.28125rem);
-    left: 1.5rem;
-    font-size: 0.5rem;
-    font-weight: 400;
-  }
+  .m-swings-view__table-header-cell-subheaders {
+    display: flex;
+    justify-content: flex-end;
 
-  &.swing-off {
-    padding-left: 2rem;
-    padding-right: 2rem;
-
-    .subheader {
-      left: 2rem;
-    }
-
-    .route-subheader {
-      position: absolute;
-      top: calc(50% + 0.28125rem);
-      left: 4.25rem;
-      font-size: 0.5rem;
+    .m-swings-view__table-header-cell-subheader {
+      padding-top: 0.125rem;
+      font-size: 0.6875rem;
       font-weight: 400;
     }
+
+    .m-swings-view__table-header-cell-route-subheader {
+      display: inline-block;
+      padding-top: 0.125rem;
+      padding-left: 1rem;
+      font-size: 0.6875rem;
+      font-weight: 400;
+    }
+  }
+
+  &.m-swings-view__table-header-cell-swing-on {
+    vertical-align: bottom;
+  }
+
+  &.m-swings-view__table-header-cell-swing-off {
+    padding-left: 3.0625rem;
+  }
+
+  &:last-child {
+    padding-right: 1.1875rem;
   }
 }
 
 .m-swings-view__table-row-active {
-  color: $color-primary;
+  color: $color-primary-dark;
   background-color: $white;
   font-weight: 700;
 }
@@ -100,25 +106,28 @@
   border-bottom: 1px solid #dcdcdc;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  padding-left: 1.5rem;
-  padding-right: 3.5rem;
   font-size: 0.6875rem;
   font-variant-numeric: tabular-nums;
+  text-align: right;
 
-  &.swing-off {
-    padding-left: 2rem;
+  &:last-child {
+    padding-left: 1.0625rem;
+    padding-right: 1.1875rem;
   }
 
-  a {
-    text-decoration-line: underline;
-    cursor: pointer;
+  .m-swings-view__table-cell-contents {
+    display: flex;
+    justify-content: flex-end;
+
+    a {
+      text-decoration-line: underline;
+      cursor: pointer;
+    }
   }
 }
 
 .m-swings-view__route-pill {
-  position: absolute;
-  left: 4.25rem;
-  top: calc(50% - 0.8125rem / 2);
+  margin-left: 0.5rem;
   background: $color-primary-dark;
   border-radius: 4px;
   font-family: $font-family-route-pill;
@@ -135,84 +144,51 @@
   text-align: center;
 }
 
-.m-swings-view__run_icon {
-  position: absolute;
+.m-swings-view__run-icon {
   fill: $color-primary-dark;
   stroke: $color-primary-dark;
 
-  &.arrow {
-    bottom: 0.75rem;
-    right: 5.25rem;
-  }
-
-  &.ghost {
-    bottom: 0.875rem;
-    right: 5.35rem;
+  &.m-swings-view__run-icon-arrow {
+    padding-right: 0.375rem;
 
     svg {
-      stroke-width: 0.2;
+      width: 0.5rem;
+      height: 0.5rem;
     }
   }
 
-  svg {
-    width: 0.75rem;
-    height: 0.75rem;
+  &.m-swings-view__run-icon-ghost {
+    padding-right: 0.5rem;
+
+    svg {
+      width: 0.75rem;
+      height: 0.75rem;
+      stroke-width: 0.2;
+    }
   }
 }
 
 @media screen and (max-width: $mobile-max-width) {
+  .m-swings-view__header {
+    padding-left: 1.75rem;
+  }
+
+  .m-swings-view__description {
+    padding-left: 1.75rem;
+  }
+
+  .m-swings-view__table-container {
+    padding-left: 0rem;
+    padding-right: 0rem;
+  }
+
   .m-swings-view__table-header-cell {
-    padding-left: 1rem;
-    padding-right: 1.25rem;
-
-    .subheader {
-      left: 1rem;
+    &.m-swings-view__table-header-cell-swing-off {
+      padding-left: 3rem;
     }
 
-    &.swing-off {
-      padding-left: 1.5rem;
-      padding-right: 1rem;
-
-      .subheader {
-        left: 1.5rem;
-      }
-    }
-
-    .swing-on {
-      display: none;
-    }
-
-    .swing-on-time {
-      position: absolute;
-      top: calc(50% + 0.28125rem);
-      left: 1rem;
-      font-size: 0.5rem;
-      font-weight: 400;
-    }
-
-    .vehicle-no {
-      display: none;
-    }
-  }
-
-  .m-swings-view__table-cell {
-    padding-left: 1rem;
-    padding-right: 1.5rem;
-
-    &.swing-off {
-      padding-left: 1.5rem;
-    }
-  }
-
-  .m-swings-view__run_icon {
-    &.arrow {
-      bottom: 0.75rem;
-      right: 4.125rem;
-    }
-
-    &.ghost {
-      bottom: 0.875rem;
-      right: 4.25rem;
+    &.m-swings-view__table-header-cell-swing-on {
+      padding-left: 1.5625rem;
     }
   }
 }
