--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -119,7 +119,8 @@
   position: relative;
   border-bottom: 1px solid #dcdcdc;
   padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 1.0625rem;
+  font-size: 0.6875rem;
   font-variant-numeric: tabular-nums;
   text-align: right;
 
@@ -131,6 +132,7 @@
   .m-swings-view__table-cell-contents {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 
     a {
       text-decoration-line: underline;
@@ -186,11 +188,9 @@
 }
 
 .m-swings-view__run-icon {
-  fill: $color-primary-dark;
-  stroke: $color-primary-dark;
-
   &.m-swings-view__run-icon-arrow {
     padding-right: 0.375rem;
+    stroke: $color-primary-dark;
 
     svg {
       width: 0.5rem;
@@ -199,12 +199,13 @@
   }
 
   &.m-swings-view__run-icon-ghost {
-    padding-right: 0.5rem;
+    position: absolute;
+    left: 1.5625rem;
+    top: 0.875rem;
 
     svg {
-      width: 0.75rem;
-      height: 0.75rem;
-      stroke-width: 0.2;
+      width: 1.1875rem;
+      height: 1.1875rem;
     }
   }
 }
