--- a/assets/css/_late_view.scss
+++ b/assets/css/_late_view.scss
@@ -1,6 +1,212 @@
+$late-view-background-color: $color-bg-light;
+$late-view-horizontal-padding: 4rem;
+$late-view-panel-left-padding: 1.5rem;
+$late-view-width: 60rem;
+
 .m-late-view {
   @include modal-content;
+  background-color: $late-view-background-color;
+  height: 100%;
+  padding: 0 $late-view-horizontal-padding;
   position: absolute;
   left: $tab-bar-width;
+  top: 0;
+  width: $late-view-width;
   z-index: 1001;
+}
+
+.m-late-view .c-drawer-tab {
+  background-color: $late-view-background-color;
+  box-shadow: $modal-box-shadow;
+  clip-path: inset(-2rem -2rem -2rem 0);
+  -webkit-clip-path: inset(-2rem -2rem -2rem 0);
+  left: $late-view-width + 2 * $late-view-horizontal-padding;
+}
+
+.m-late-view__title {
+  font-size: 2.5rem;
+  font-weight: 900;
+  margin-bottom: 2.5rem;
+  margin-top: 2rem;
+  padding-left: $late-view-panel-left-padding;
+}
+
+.m-late-view__panels {
+  display: flex;
+}
+
+.m-late-view__panel {
+  background-color: $white;
+  border-radius: 0.5rem;
+  filter: drop-shadow(0px 8px 16px rgba(0, 0, 0, 0.16))
+    drop-shadow(0px 16px 24px rgba(176, 181, 192, 0.24));
+  height: fit-content;
+
+  .m-late-view__panel-header {
+    font-size: 1.5rem;
+    padding-left: $late-view-panel-left-padding;
+  }
+
+  .m-late-view__panel-header-icon {
+    position: relative;
+
+    svg {
+      height: 1.5rem;
+      position: relative;
+      top: 0.3rem;
+      width: 1.5rem;
+    }
+  }
+
+  table {
+    border-collapse: collapse;
+    font-size: 0.75rem;
+
+    thead {
+      border-bottom: solid $color-primary-dark 1px;
+      color: $color-component-dark;
+      font-weight: bold;
+      text-align: left;
+    }
+
+    tbody {
+      tr {
+        border-bottom: solid $color-secondary-light 1px;
+      }
+    }
+
+    th {
+      height: 3rem;
+      padding-top: 1.5rem;
+      vertical-align: top;
+    }
+
+    td {
+      padding-bottom: 1rem;
+      padding-top: 1rem;
+    }
+
+    th:first-child,
+    td:first-child {
+      padding-left: $late-view-panel-left-padding;
+    }
+  }
+}
+
+.m-late-view__missing-logons {
+  margin-right: $late-view-horizontal-padding;
+  width: 20rem;
+}
+
+.m-late-view__late-buses {
+  width: 28rem;
+}
+
+.m-late-view__run-link {
+  align-items: center;
+  display: flex;
+  font-weight: 600;
+  height: 100%;
+  margin-right: 0.25rem;
+
+  .m-late-view__run-icon {
+    display: inline-block;
+    margin-right: 0.375rem;
+    position: relative;
+    width: 1.25rem;
+  }
+
+  svg {
+    position: absolute;
+    right: 0;
+  }
+
+  .m-late-view__block-waiver-icon {
+    svg {
+      height: 1.25rem;
+      stroke: $color-primary-dark;
+      top: -0.625rem;
+      width: 1.25rem;
+    }
+  }
+
+  .m-late-view__ghost-icon {
+    svg {
+      height: 1.25rem;
+      top: -0.625rem;
+      width: 1.25rem;
+    }
+  }
+
+  .m-late-view__up-right-icon {
+    svg {
+      height: 0.5rem;
+      stroke: $color-primary-dark;
+      top: -0.25rem;
+      width: 0.5rem;
+    }
+  }
+}
+
+.m-late-view__adherence-header {
+  width: 5rem;
+}
+
+.m-late-view__route-header {
+  width: 5rem;
+}
+
+.m-late-view__vehicle-header {
+  width: 5rem;
+}
+
+.m-late-view__run-number-header {
+  width: 5rem;
+}
+
+.m-late-view__scheduled-logon-header {
+  width: 5rem;
+}
+
+.m-late-view__location-header {
+  width: 10rem;
+}
+
+.m-late-view__operator-header {
+  width: 14rem;
+}
+
+.m-late-view__run-number-cell {
+  position: relative;
+  text-decoration: underline;
+
+  a {
+    cursor: pointer;
+  }
+}
+
+.m-late-view__route-pill {
+  margin-left: 0.5rem;
+  background: $color-primary-dark;
+  border-radius: 0.25rem;
+  font-family: $font-family-route-pill;
+  width: 1.625rem;
+  height: 0.9375rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: $white;
+  position: relative;
+  left: -0.4rem;
+}
+
+.m-late-view__missing-logons-panel-header {
+  color: $color-primary;
+  fill: $color-primary;
+}
+
+.m-late-view__late-buses-panel-header {
+  color: $color-secondary-dark;
+  fill: $color-secondary-dark;
 }
