--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -13,6 +13,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "crowding";
 @import "data_status_banner";
 @import "disconnected_modal";
+@import "drawer_tab";
 @import "icon_alert_circle";
 @import "incoming_box";
 @import "inactive_notification_modal";
