feat: create Pigeon map, draw vehicles on it

--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -50,6 +50,8 @@
   fill: $white;
   stroke: $color-component-dark;
   stroke-width: 4;
+  width: 12px;
+  height: 12px;
 
   svg {
     overflow: visible;
