--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "inter";
 @import "ui_kit";
 @import "leaflet";
+@import "pigeon";
 
 @import "close_button";
 @import "crowding";
