fixup: keep using semantically correct element

--- a/assets/css/_late_view.scss
+++ b/assets/css/_late_view.scss
@@ -45,6 +45,8 @@ $late-view-width: 31rem;
   height: fit-content;
 
   .m-late-view__panel-header {
+    font: inherit;
+    margin: 0;
     padding: 1rem 0 1rem 1.5rem;
   }
 
