--- a/assets/css/_late_view.scss
+++ b/assets/css/_late_view.scss
@@ -5,12 +5,16 @@ $late-view-width: 31rem;
   @include modal-content;
   background-color: $late-view-background-color;
   height: 100%;
-  overflow-y: scroll;
   position: absolute;
   left: $tab-bar-width;
   top: 0;
   width: $late-view-width;
   z-index: 1001;
+}
+
+.m-late-view__content-wrapper {
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .m-late-view .c-drawer-tab {
