--- a/assets/css/_late_view.scss
+++ b/assets/css/_late_view.scss
@@ -42,9 +42,9 @@ $late-view-width: 31rem;
 .m-late-view__panel {
   background-color: $white;
   border-radius: 0.5rem;
-  filter: drop-shadow(0px 8px 25px 0px rgba(23, 31, 38, 0.14))
-    drop-shadow(0px 4px 10px 0px rgba(0, 0, 0, 0.11))
-    drop-shadow(0px 2px 4px 0px rgba(0, 0, 0, 0.06));
+  filter: drop-shadow(0px 8px 25px rgba(23, 31, 38, 0.14))
+    drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.11))
+    drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.06));
 
   height: fit-content;
 
