fixup: no border-bottom on last tr

--- a/assets/css/_late_view.scss
+++ b/assets/css/_late_view.scss
@@ -70,7 +70,7 @@ $late-view-width: 31rem;
     }
 
     tbody {
-      tr {
+      tr:not(:last-child) {
         border-bottom: solid $color-secondary-light 1px;
       }
     }
