set size of checkbox header

--- a/assets/css/_late_view.scss
+++ b/assets/css/_late_view.scss
@@ -146,6 +146,10 @@ $late-view-width: 32.125rem;
   }
 }
 
+.m-late-view__hide-check-header {
+  width: 3rem;
+}
+
 .m-late-view__adherence-header {
   width: 5rem;
 }
