background on row select

--- a/assets/css/_late_view.scss
+++ b/assets/css/_late_view.scss
@@ -226,3 +226,7 @@ $late-view-width: 32.125rem;
   bottom: 1em;
   left: 3em;
 }
+
+.m-late-view__data-row--selected {
+  background-color: #f1f8f3;
+}
