chore: include data-route-tabs on page render

--- a/lib/skate_web/templates/page/index.html.eex
+++ b/lib/skate_web/templates/page/index.html.eex
@@ -3,6 +3,7 @@
   data-csrf-token="<%= @csrf_token %>"
   data-user-settings="<%= Jason.encode!(@user_settings) %>"
   data-route-settings="<%= Jason.encode!(@route_settings) %>"
+  data-route-tabs="<%= Jason.encode!(@route_tabs) %>"
   data-laboratory-features="<%= Jason.encode!(@laboratory_features) %>"
   data-dispatcher-flag="<%= Jason.encode!(@dispatcher_flag) %>"
 ></div>
