Halloween Skate logo and invalid buses as bats

--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -65,6 +65,8 @@ $color-line-gapped-light: #75e8ff;
 $color-stop-fill: $white;
 $color-stop-stroke: $black;
 
+$color-logo-halloween: #f4b347;
+
 // type styles
 
 @mixin font-header-big {
