--- a/assets/css/_late_view.scss
+++ b/assets/css/_late_view.scss
@@ -1,5 +1,5 @@
 $late-view-background-color: $color-bg-light;
-$late-view-width: 31rem;
+$late-view-width: 34.5rem;
 
 .m-late-view {
   @include modal-content;
@@ -53,7 +53,9 @@ $late-view-width: 31rem;
   .m-late-view__panel-header {
     font: inherit;
     margin: 0;
-    padding: 1rem 0 1rem 1.5rem;
+    padding: 1rem 1.5rem;
+    display: flex;
+    justify-content: space-between;
   }
 
   table {
@@ -70,8 +72,19 @@ $late-view-width: 31rem;
     }
 
     tbody {
+      tr {
+        border-right: solid transparent 1px;
+        border-left: solid transparent 1px;
+      }
+
       tr:not(:last-child) {
         border-bottom: solid $color-secondary-light 1px;
+      }
+
+      tr:hover {
+        border-right: solid $color-bg-medium 1px;
+        border-left: solid $color-bg-medium 1px;
+        box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
       }
     }
 
@@ -94,11 +107,11 @@ $late-view-width: 31rem;
 }
 
 .m-late-view__missing-logons {
-  width: 28rem;
+  width: 29.5rem;
 }
 
 .m-late-view__late-buses {
-  width: 28rem;
+  width: 29.5rem;
 }
 
 .m-late-view__run-link {
@@ -144,6 +157,10 @@ $late-view-width: 31rem;
       width: 0.5rem;
     }
   }
+}
+
+.m-late-view__hide-check-header {
+  width: 3rem;
 }
 
 .m-late-view__adherence-header {
@@ -204,4 +221,136 @@ $late-view-width: 31rem;
   display: flex;
   justify-content: flex-end;
   padding-right: 1.5rem;
+}
+
+.m-late-view__popup {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border: 1px solid #e5e7eb;
+  position: absolute;
+  bottom: 1rem;
+  left: 3rem;
+  width: 28rem;
+  background-color: #fafafa;
+  border-radius: 0.25rem;
+  padding: 0.75rem;
+  font-size: 0.75rem;
+  font-weight: 600;
+
+  button {
+    padding: 0.25rem;
+    position: absolute;
+    top: 0.5rem;
+    right: 0.75rem;
+    border-radius: 0.25rem;
+
+    svg {
+      height: 0.75rem;
+      width: 0.75rem;
+      position: relative;
+      top: 0.125rem;
+      padding-right: 0.25rem;
+    }
+  }
+}
+
+.m-late-view__hide-popup {
+  button {
+    background-color: #055c66;
+    color: #fafafa;
+
+    &:hover {
+      background-color: #118d86;
+    }
+
+    svg path {
+      stroke: #fafafa;
+    }
+  }
+}
+
+.m-late-view__unhide-popup {
+  button {
+    background-color: #fafafa;
+    color: #055c66;
+  }
+}
+
+.m-late-view__data-row {
+  input:hover::before {
+    background-color: #beede2;
+    content: "\000A0";
+    opacity: 0.3;
+    display: block;
+    height: 200%;
+    width: 200%;
+    position: relative;
+    top: -50%;
+    left: -50%;
+    clip-path: circle(50%);
+    -webkit-clip-path: circle(50%);
+  }
+}
+
+.m-late-view__data-row--selected {
+  background-color: #f1f8f3;
+}
+
+.m-late-view__hide-toggle {
+  svg {
+    height: 1rem;
+    width: 1rem;
+  }
+}
+
+.m-late-view__toggle-exterior {
+  display: inline-block;
+  width: 2rem;
+  margin-left: 0.5rem;
+  position: relative;
+  border-width: 1px;
+}
+
+.m-late-view__toggle-interior {
+  width: 1rem;
+  position: absolute;
+  border-width: 1px;
+  top: -1px;
+}
+
+.m-late-view__toggle-exterior,
+.m-late-view__toggle-interior {
+  height: 1rem;
+  border-radius: 0.5rem;
+  border-style: solid;
+}
+
+.m-late-view__hide-toggle--hidden {
+  svg path {
+    stroke: #6e717d;
+  }
+
+  .m-late-view__toggle-interior {
+    left: -1px;
+  }
+
+  .m-late-view__toggle-exterior,
+  .m-late-view__toggle-interior {
+    border-color: #6e717d;
+  }
+}
+
+.m-late-view__hide-toggle--unhidden {
+  svg path {
+    stroke: #222534;
+  }
+
+  .m-late-view__toggle-interior {
+    right: -1px;
+    background-color: #222534;
+  }
+
+  .m-late-view__toggle-exterior,
+  .m-late-view__toggle-interior {
+    border-color: #222534;
+  }
 }
