feat: allow showing / hiding garage filters

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,6 +15,7 @@ $picker-width-wide: $picker-width-narrow + 1.1;
 @import "data_status_banner";
 @import "disconnected_modal";
 @import "drawer_tab";
+@import "garage_filter";
 @import "icon_alert_circle";
 @import "incoming_box";
 @import "inactive_notification_modal";
