fix: respond to product / design review

--- a/assets/css/_route_filter.scss
+++ b/assets/css/_route_filter.scss
@@ -8,6 +8,7 @@
 
 .m-route-filter__input {
   width: 100%;
+  font-size: 0.75rem;
   border: 1px solid #9fa2ac;
   border-radius: 4px;
   margin: 1px 0;
