--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,8 +1,8 @@
 $non-mobile-min-width: 768px;
 $mobile-max-width: $non-mobile-min-width - 1;
 $tab-bar-width: 3rem;
-$picker-width-narrow: 9.5rem;
-$picker-width-wide: $picker-width-narrow + 3.1;
+$picker-width-narrow: 11.5rem;
+$picker-width-wide: $picker-width-narrow + 1.1;
 
 @import "base";
 @import "inter";
@@ -15,6 +15,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "data_status_banner";
 @import "disconnected_modal";
 @import "drawer_tab";
+@import "garage_filter";
 @import "icon_alert_circle";
 @import "incoming_box";
 @import "inactive_notification_modal";
