--- a/assets/css/_incoming_box.scss
+++ b/assets/css/_incoming_box.scss
@@ -5,6 +5,8 @@
   grid-row-start: m-incoming-box;
   margin: 0 0.5rem;
   min-height: 2.5rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 2px solid #e5e7eb;
 }
 
 .m-incoming-box__vehicle {
