--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -3,6 +3,7 @@
   height: 100%;
   position: relative;
   transition: $transition-slide;
+  background-color: #fafafa;
 
   .m-tab-bar.hidden + & {
     margin-left: 0;
