fix: default cursor on tab title

--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -74,6 +74,7 @@ $color-route-tabs-separator: #9fa2ac;
   align-items: center;
   padding-left: 0.75rem;
   min-width: 0;
+  cursor: default;
 
   .m-ladder-page__tab-title {
     flex-grow: 1;
