fix: hyphenate long preset names

--- a/assets/css/_presets.scss
+++ b/assets/css/_presets.scss
@@ -16,6 +16,7 @@
           color: #0041ea;
           text-decoration-line: underline;
           text-align: start;
+          hyphens: auto;
         }
       }
 
