--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -19,6 +19,7 @@ $picker-width-wide: $picker-width-narrow + 1.1;
 @import "icon_alert_circle";
 @import "incoming_box";
 @import "inactive_notification_modal";
+@import "input_modal";
 @import "ladder";
 @import "ladder_page";
 @import "late_view";
