feat: overlay for preset modals

--- a/assets/css/_input_modal.scss
+++ b/assets/css/_input_modal.scss
@@ -15,6 +15,11 @@
   line-height: 1.125rem;
 }
 
+.m-input-modal__overlay {
+  @include modal-overlay;
+  z-index: 2000;
+}
+
 .m-input-modal__title {
   font-size: 1.125rem;
   font-weight: 500;
