fix: implement create preset modal as form
This allows using the enter key to submit

--- a/assets/css/_input_modal.scss
+++ b/assets/css/_input_modal.scss
@@ -13,6 +13,13 @@
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 0.25rem;
   line-height: 1.125rem;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
 }
 
 .m-input-modal__overlay {
