feat: disabled state for save as preset button

--- a/assets/css/_presets.scss
+++ b/assets/css/_presets.scss
@@ -50,5 +50,18 @@
         }
       }
     }
+
+    &:disabled {
+      cursor: default;
+      font-weight: 500;
+      color: #e5e7eb;
+      background: #9fa2ac;
+
+      svg {
+        path {
+          stroke: #e5e7eb;
+        }
+      }
+    }
   }
 }
