refactor: separate containers for shuttle / route pickers

--- a/assets/css/_shuttle_map.scss
+++ b/assets/css/_shuttle_map.scss
@@ -3,7 +3,7 @@
   position: relative;
   transition: $transition-slide;
 
-  .m-picker-container {
+  .m-shuttle-picker-container {
     z-index: 620;
   }
 
