--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -52,6 +52,7 @@ $picker-width-wide: $picker-width-narrow + 1.1;
 @import "search_results";
 @import "settings_page";
 @import "shuttle_map";
+@import "shuttle_picker_container";
 @import "swings_view";
 @import "tab_bar";
 @import "vehicle_icon";
