--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,8 +1,9 @@
 $non-mobile-min-width: 768px;
 $mobile-max-width: $non-mobile-min-width - 1;
 $tab-bar-width: 3rem;
-$picker-width-narrow: 11.5rem;
-$picker-width-wide: $picker-width-narrow + 1.1;
+$route-picker-width: 21.875rem;
+$mobile-route-picker-width: 18.625rem;
+$shuttle-picker-width: 12.6rem;
 
 @import "base";
 @import "inter";
